Gramatica/codigo medio/gen/DemiseParser.py
# Generated from Demise.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DemiseParser ( Parser ):

    grammarFileName = "Demise.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sprite'", "<INVALID>", "'npc'", "'music'", 
                     "'map'", "'UI'", "'weapon'", "<INVALID>", "'->'", "'('", 
                     "')'", "'['", "']'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "SPRITE", "SPRITE_TYPE", "NPC", "MUSIC", 
                      "MAP", "UI", "WEAPON", "WEAPON_LOGIC", "ARROW", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "COMMA", "SEMICOLON", 
                      "INTEGER", "STRING_LITERAL", "ID", "COMENTARIO", "ESPACIO", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_spriteDeclaration = 2
    RULE_npcDeclaration = 3
    RULE_musicDeclaration = 4
    RULE_mapDeclaration = 5
    RULE_mapRow = 6
    RULE_uiDeclaration = 7
    RULE_npcPositioning = 8
    RULE_weaponDeclaration = 9

    ruleNames =  [ "program", "statement", "spriteDeclaration", "npcDeclaration", 
                   "musicDeclaration", "mapDeclaration", "mapRow", "uiDeclaration", 
                   "npcPositioning", "weaponDeclaration" ]

    EOF = Token.EOF
    SPRITE=1
    SPRITE_TYPE=2
    NPC=3
    MUSIC=4
    MAP=5
    UI=6
    WEAPON=7
    WEAPON_LOGIC=8
    ARROW=9
    LPAREN=10
    RPAREN=11
    LBRACKET=12
    RBRACKET=13
    COMMA=14
    SEMICOLON=15
    INTEGER=16
    STRING_LITERAL=17
    ID=18
    COMENTARIO=19
    ESPACIO=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DemiseParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DemiseParser.StatementContext)
            else:
                return self.getTypedRuleContext(DemiseParser.StatementContext,i)


        def getRuleIndex(self):
            return DemiseParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DemiseParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1835258) != 0):
                self.state = 20
                self.statement()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(DemiseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def spriteDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.SpriteDeclarationContext,0)


        def mapDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.MapDeclarationContext,0)


        def npcDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.NpcDeclarationContext,0)


        def npcPositioning(self):
            return self.getTypedRuleContext(DemiseParser.NpcPositioningContext,0)


        def musicDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.MusicDeclarationContext,0)


        def weaponDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.WeaponDeclarationContext,0)


        def uiDeclaration(self):
            return self.getTypedRuleContext(DemiseParser.UiDeclarationContext,0)


        def COMENTARIO(self):
            return self.getToken(DemiseParser.COMENTARIO, 0)

        def ESPACIO(self):
            return self.getToken(DemiseParser.ESPACIO, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DemiseParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 37
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.spriteDeclaration()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.mapDeclaration()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.npcDeclaration()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 4)
                self.state = 31
                self.npcPositioning()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 32
                self.musicDeclaration()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 33
                self.weaponDeclaration()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 34
                self.uiDeclaration()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 8)
                self.state = 35
                self.match(DemiseParser.COMENTARIO)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 9)
                self.state = 36
                self.match(DemiseParser.ESPACIO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpriteDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPRITE(self):
            return self.getToken(DemiseParser.SPRITE, 0)

        def SPRITE_TYPE(self):
            return self.getToken(DemiseParser.SPRITE_TYPE, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_spriteDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpriteDeclaration" ):
                listener.enterSpriteDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpriteDeclaration" ):
                listener.exitSpriteDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpriteDeclaration" ):
                return visitor.visitSpriteDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def spriteDeclaration(self):

        localctx = DemiseParser.SpriteDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_spriteDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(DemiseParser.SPRITE)
            self.state = 40
            self.match(DemiseParser.SPRITE_TYPE)
            self.state = 41
            self.match(DemiseParser.ARROW)
            self.state = 42
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NpcDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NPC(self):
            return self.getToken(DemiseParser.NPC, 0)

        def ID(self):
            return self.getToken(DemiseParser.ID, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_npcDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNpcDeclaration" ):
                listener.enterNpcDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNpcDeclaration" ):
                listener.exitNpcDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNpcDeclaration" ):
                return visitor.visitNpcDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def npcDeclaration(self):

        localctx = DemiseParser.NpcDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_npcDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(DemiseParser.NPC)
            self.state = 45
            self.match(DemiseParser.ID)
            self.state = 46
            self.match(DemiseParser.ARROW)
            self.state = 47
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MusicDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUSIC(self):
            return self.getToken(DemiseParser.MUSIC, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_musicDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMusicDeclaration" ):
                listener.enterMusicDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMusicDeclaration" ):
                listener.exitMusicDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMusicDeclaration" ):
                return visitor.visitMusicDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def musicDeclaration(self):

        localctx = DemiseParser.MusicDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_musicDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(DemiseParser.MUSIC)
            self.state = 50
            self.match(DemiseParser.ARROW)
            self.state = 51
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAP(self):
            return self.getToken(DemiseParser.MAP, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def SEMICOLON(self):
            return self.getToken(DemiseParser.SEMICOLON, 0)

        def mapRow(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DemiseParser.MapRowContext)
            else:
                return self.getTypedRuleContext(DemiseParser.MapRowContext,i)


        def getRuleIndex(self):
            return DemiseParser.RULE_mapDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapDeclaration" ):
                listener.enterMapDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapDeclaration" ):
                listener.exitMapDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapDeclaration" ):
                return visitor.visitMapDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def mapDeclaration(self):

        localctx = DemiseParser.MapDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mapDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(DemiseParser.MAP)
            self.state = 54
            self.match(DemiseParser.ARROW)
            self.state = 56 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 55
                self.mapRow()
                self.state = 58 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==12):
                    break

            self.state = 60
            self.match(DemiseParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapRowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(DemiseParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DemiseParser.RBRACKET, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(DemiseParser.INTEGER)
            else:
                return self.getToken(DemiseParser.INTEGER, i)

        def getRuleIndex(self):
            return DemiseParser.RULE_mapRow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapRow" ):
                listener.enterMapRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapRow" ):
                listener.exitMapRow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapRow" ):
                return visitor.visitMapRow(self)
            else:
                return visitor.visitChildren(self)




    def mapRow(self):

        localctx = DemiseParser.MapRowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mapRow)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(DemiseParser.LBRACKET)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.match(DemiseParser.INTEGER)
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==16):
                    break

            self.state = 68
            self.match(DemiseParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UiDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UI(self):
            return self.getToken(DemiseParser.UI, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_uiDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUiDeclaration" ):
                listener.enterUiDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUiDeclaration" ):
                listener.exitUiDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUiDeclaration" ):
                return visitor.visitUiDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def uiDeclaration(self):

        localctx = DemiseParser.UiDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_uiDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(DemiseParser.UI)
            self.state = 71
            self.match(DemiseParser.ARROW)
            self.state = 72
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NpcPositioningContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DemiseParser.ID, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def LPAREN(self):
            return self.getToken(DemiseParser.LPAREN, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(DemiseParser.INTEGER)
            else:
                return self.getToken(DemiseParser.INTEGER, i)

        def COMMA(self):
            return self.getToken(DemiseParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(DemiseParser.RPAREN, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_npcPositioning

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNpcPositioning" ):
                listener.enterNpcPositioning(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNpcPositioning" ):
                listener.exitNpcPositioning(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNpcPositioning" ):
                return visitor.visitNpcPositioning(self)
            else:
                return visitor.visitChildren(self)




    def npcPositioning(self):

        localctx = DemiseParser.NpcPositioningContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_npcPositioning)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(DemiseParser.ID)
            self.state = 75
            self.match(DemiseParser.ARROW)
            self.state = 76
            self.match(DemiseParser.LPAREN)
            self.state = 77
            self.match(DemiseParser.INTEGER)
            self.state = 78
            self.match(DemiseParser.COMMA)
            self.state = 79
            self.match(DemiseParser.INTEGER)
            self.state = 80
            self.match(DemiseParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WeaponDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WEAPON(self):
            return self.getToken(DemiseParser.WEAPON, 0)

        def ID(self):
            return self.getToken(DemiseParser.ID, 0)

        def ARROW(self):
            return self.getToken(DemiseParser.ARROW, 0)

        def STRING_LITERAL(self):
            return self.getToken(DemiseParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return DemiseParser.RULE_weaponDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWeaponDeclaration" ):
                listener.enterWeaponDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWeaponDeclaration" ):
                listener.exitWeaponDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWeaponDeclaration" ):
                return visitor.visitWeaponDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def weaponDeclaration(self):

        localctx = DemiseParser.WeaponDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_weaponDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(DemiseParser.WEAPON)
            self.state = 83
            self.match(DemiseParser.ID)
            self.state = 84
            self.match(DemiseParser.ARROW)
            self.state = 85
            self.match(DemiseParser.STRING_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





